css/main.css
@font-face {
    font-family: "Mario";
    font-style: normal;
    src: url(../fonts/MARIO_Font_v3_Solid.otf) format('truetype');
}

@font-face {
    font-family: "Roboto Mono";
    font-style: normal;
    src: url(../fonts/RobotoMono-VariableFont_wght.ttf) format('truetype');
}

@font-face {
    font-family: "Noto Sans";
    font-style: normal;
    src: url(../fonts/NotoSans-VariableFont_wdth,wght.ttf) format('truetype');
}

/* Heading */
/* Clamp measurements generated by https://clamp.vittoretrivi.dev/ */
header {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.5rem clamp(0.5rem, -1.3411rem + 3.8356vw, 1.2rem);
    gap: 0.5rem;
    white-space: nowrap;
    align-self: stretch;
    border-bottom: 0.2rem black solid;

    a {
        font-family: "Mario";
        font-size: clamp(1.5rem, -1.1301rem + 5.4795vw, 2.5rem);
        paint-order: stroke fill;
        -webkit-text-stroke: 0.3rem black;
        text-shadow: 0.2rem 0.2rem 0.3rem rgba(0, 0, 0, 0.5);

        /* Safari fix for shadows */
        @supports (background: -webkit-named-image(i)) {
            text-shadow: 0.1rem 0.1rem 0.15rem rgba(0, 0, 0, 0.5);
        }

        display: flex;
        color: white;
        text-align: center;
    }

    @media screen and (min-width: 768px) {
        img {
            width: 2.75rem;
            border-radius: 3rem;
            border-style: solid;
            border-color: black;
            border-width: 0.2rem;
            box-shadow: 0.1rem 0.1rem 0.5rem rgba(0, 0, 0, 0.5);
        }
    }

    @media screen and (max-width: 768px) {
        img {
            width: 1.25rem;
            border-radius: 3rem;
            border-radius: 3rem;
            border-style: solid;
            border-color: black;
            border-width: 0.2rem;
            box-shadow: 0.1rem 0.1rem 0.5rem rgba(0, 0, 0, 0.5);
            
        }
    }

    nav {
        display: flex;
        gap: clamp(1rem, -4.2603rem + 10.9589vw, 3rem);

        ul {
            display: flex;
            gap: 1rem;
            align-items: center;
            font-size: clamp(1rem, -0.3151rem + 2.7397vw, 1.5rem);
        }
    }

    a:hover {
        color: #A2A2C0;;
    }

    img:hover {
        filter: brightness(80%);
    }
}

/* Body */
body {
    font-family: 'Noto Sans';
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    align-items: center;
    background: linear-gradient(135deg, rgba(237, 106, 209, 1) 0%, rgba(238, 71, 65, 1) 100%);
    z-index: -1;
}

@keyframes lines {
    0%   { transform: translateX(-8rem); }
    100% { transform: translateX(0rem); }
}

.line {
    position: absolute;
    left: 0;
    width: 150vw;
    height: 100%;
    background: repeating-linear-gradient(
      100deg,
      #757575,
      #757575 4rem,
      transparent 4rem,
      transparent 8rem
    );

    opacity: 0.25;
    mix-blend-mode: color-burn;
    z-index: -1;

    animation: lines 5s linear;
    animation-iteration-count: infinite;
    
    overflow: hidden;
}

/* Firefox mobile seems to die due to the lines, rip */
@supports (-moz-appearance: none) {
    @media (max-width: 768px) and (pointer: coarse) {
        .line {
            width: 0;
            height: 0;
            background: transparent;
            animation: none;
        }
    }
}

html, body {
    max-width: 100%;
    height: 100%;
    min-height: 100%;
    max-height: 100%;
    overflow-x: hidden;
}

main {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    background-color: white;
    align-self: stretch;
}

/* Heading Sizes */
h1 { font-size: 2.5rem; }
h2 { font-size: 2rem; }
h3 { font-size: 1.8rem; }
h4 { font-size: 1.5rem; }

/* Figures and Captions */
figure {
    display: flex;
    width: fit-content;
    flex-direction: column;

    img {
        border-radius: 0.3rem;
        border-style: solid;
        border-color: black;
        border-width: 0.3rem;
        box-shadow: 0.1rem 0.1rem 0.5rem rgba(0, 0, 0, 0.5);
    }
}

/* Footer */
footer {
    font-family: 'Noto Sans';
    padding: 0.5rem 0.75rem;
    border-top: 0.2rem black solid;
    display: flex;
    align-items: center;
    justify-content: center;
    align-self: stretch;

    p {
        color: white;
    }

    ul {
        display: flex;
        gap: 1rem;
        color: white;
    }

    img {
        max-width: 2.5rem;
        max-height: 2.5rem;

        @media screen and (max-width: 768px) {
            max-width: 1.5rem;
            max-height: 1.5rem;
        }

        filter: drop-shadow(-1px -1px 0 #000)
                drop-shadow(0   -1px 0 #000)
                drop-shadow(1px -1px 0 #000)
                drop-shadow(1px  0   0 #000)
                drop-shadow(1px  1px 0 #000)
                drop-shadow(0    1px 0 #000)
                drop-shadow(-1px  1px 0 #000)
                drop-shadow(-1px  0   0 #000)
                drop-shadow(0.2rem 0.2rem 0.25rem rgba(0, 0, 0, 0.5));
    }
    
    img:hover {
        filter: sepia(100%) saturate(300%) brightness(65%) hue-rotate(180deg)
                drop-shadow(-1px -1px 0 #000)
                drop-shadow(0   -1px 0 #000)
                drop-shadow(1px -1px 0 #000)
                drop-shadow(1px  0   0 #000)
                drop-shadow(1px  1px 0 #000)
                drop-shadow(0    1px 0 #000)
                drop-shadow(-1px  1px 0 #000)
                drop-shadow(-1px  0   0 #000)
                drop-shadow(0.2rem 0.2rem 0.25rem rgba(0, 0, 0, 0.5));
    }
}

